Added functionality for encrypting and decrypting data

--- a/src/test/resources/config.properties
+++ b/src/test/resources/config.properties
@@ -1,1 +1,3 @@
-baseURI=https://reqres.in/api
+baseURI=https://api.openweathermap.org
+jsonPHBaseURI=https://jsonplaceholder.typicode.com
+apiKey=5d7198075d2f737a9e1d66fc918cac72
