Added functionality for sending files over HTTP / HTTPS using REST

--- a/src/test/resources/config.properties
+++ b/src/test/resources/config.properties
@@ -1,1 +1,6 @@
-baseURI=https://api.openweathermap.org
+googleApiBaseURI=https://www.googleapis.com
+googleSendFileAPIEndpoint=/upload/drive/v3/files?uploadType=media
+googleUpdateFileAPIEndpoint=/drive/v3/files/{id}
+googleGetFilesAPIEndpoint=/drive/v3/files
+googleDeleteFilesAPIEndpoint=/drive/v3/files/{id}
+googleAuthKeyPath=src/test/resources/authkey.json
