Added a utility to read file content from an API  as bytes and create a file

--- a/src/test/resources/config.properties
+++ b/src/test/resources/config.properties
@@ -1,6 +1,7 @@
 googleApiBaseURI=https://www.googleapis.com
 googleSendFileAPIEndpoint=/upload/drive/v3/files?uploadType=media
-googleUpdateFileAPIEndpoint=/drive/v3/files/{id}
+googleGetTargetFileAPIEndpoint=/drive/v3/files/{id}
 googleGetFilesAPIEndpoint=/drive/v3/files
-googleDeleteFilesAPIEndpoint=/drive/v3/files/{id}
+googleGetFileMetaDataEndpoint=/drive/v3/files/{id}
+googleGetFileContentEndpoint=/drive/v3/files/{id}?alt=media
 googleAuthKeyPath=src/test/resources/authkey.json
