Added API tests both SOAP and REST

--- a/src/test/resources/api/config.properties
+++ b/src/test/resources/api/config.properties
@@ -1,3 +1,4 @@
-googleAuthKeyPath=src/test/resources/authkey.json
-musicAPI=https://api.lyrics.ovh/v1
-capCityBaseURI=http://webservices.oorsprong.org/websamples.countryinfo/CountryInfoService.wso
+googleAuthKeyPath=src/test/resources/api/service-account-details-decrypted.json
+googleBaseURI=https://www.googleapis.com
+googleFolderId=1Rw8GKiHZO9QQUK9rmngdJzupa5ORQsEl
+countryInfoBaseURI=http://webservices.oorsprong.org
